[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-triage-env"
version = "1.0.0"
description = "Customer Support Ticket Triage Environment for OpenEnv"
requires-python = ">=3.10"

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.28.0"
]

[project.scripts]
server = "server.app:main"